--- a/style.css
+++ b/style.css
@@ -16,36 +16,17 @@ ul {
     padding: 0;
     margin: 0;
 }
-/* anchor hover animations */
-.middle-nav a {
-    display: inline-block;
-    position: relative;
-
-
-  }
-
-  
-  .middle-nav a:after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #000000;
-    transform-origin: bottom left;
-    transition: transform 0.25s ease-out;
-  }
-  
-  .middle-nav a:hover:after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-    
-  }
 
 
 /* Style the navigation bar */
+.nav-menu{
+    position: sticky;
+    top: 0;
+    backdrop-filter: blur(5px);
+    background-color: rgba(169, 169, 169, 0.205);
+    border-bottom: 1px solid black;
+}
+
 
 
 .navbar {
@@ -57,17 +38,19 @@ ul {
     background: none;
     font-size: 16px;
     font-style: bold;
+    
 
+}
+.navbar a{
+    color: black;
+    /* font-style: "__Montserrat_cce811","__Montserrat_Fallback_cce811"; */
 }
 .nav-logo{
     max-width: 45px;
     padding: 0;
 }
 
-.navbar a{
-    color: black;
-    /* font-style: "__Montserrat_cce811","__Montserrat_Fallback_cce811"; */
-}
+
 
 
 /* Style each navigation list */
@@ -85,7 +68,7 @@ ul {
     transition: transform 0.2s;
 }
 .right-nav i:hover{
-    transform: scale(1.1);
+    transform: scale(1.125);
 }
 /* Style list items and links */
 .left-nav li{
@@ -96,6 +79,36 @@ ul {
     margin: 0 10px;
     padding-top: 18px;
 }
+
+
+
+/* anchor hover animations */
+.middle-nav a {
+    display: inline-block;
+    position: relative;
+
+
+  }
+
+  
+.middle-nav a:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000000;
+    transform-origin: bottom left;
+    transition: transform 0.25s ease-out;
+  }
+  
+  .middle-nav a:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+    
+  }
 .right-nav {
     margin: 0 10px;
     padding-top: 10px;
@@ -115,6 +128,7 @@ ul {
     background-repeat: no-repeat;
     background-size: cover;
     height: 700px;
+    border-bottom: 1px solid black;
     /* border-bottom:1px solid #000000; */
 }
 .left-img{
@@ -126,9 +140,7 @@ ul {
 .main p{
     font-size: 1.2rem;
 }
-.over{
-    font-size: 1rem;
-}
+
 .right-buttons{
     margin-top: 2rem;
 }
@@ -177,4 +189,28 @@ ul {
     align-items: center;
     justify-content: space-between;
     margin: 10px 12px 10px 12px;
+}
+
+
+ /*------------------------------------- ######################### mobile responsive ########################### ------------------------------- */
+/* CSS for mobile screens */
+@media (max-width: 768px) {
+.nav-menu {
+    flex-direction: column;
+    align-items: center;
+}
+.middle-nav {
+    margin-top: 20px;
+    text-align: center;
+}
+.middle-nav li {
+    margin: 10px 0;
+}
+.right-nav {
+    margin-top: 20px;
+    text-align: center;
+}
+.right-nav i {
+    margin: 10px;
+}
 }
