--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     box-sizing: border-box;
     padding-top: 2px;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     background-color: #F2F2F2;
     font-family: 'Josefin Sans', sans-serif;
@@ -24,7 +27,6 @@ ul {
     top: 0;
     backdrop-filter: blur(5px);
     background-color: rgba(169, 169, 169, 0.205);
-    border-bottom: 1px solid black;
 }
 
 
@@ -38,7 +40,7 @@ ul {
     background: none;
     font-size: 16px;
     font-style: bold;
-    
+    border-bottom: 1px solid black;
 
 }
 .navbar a{
