--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
     padding: 0;
     text-decoration: none;
     box-sizing: border-box;
-    padding-top: 2px;
+   
+    scroll-behavior: smooth;
 }
 html{
     scroll-behavior: smooth;
@@ -27,6 +28,7 @@ ul {
     top: 0;
     backdrop-filter: blur(5px);
     background-color: rgba(169, 169, 169, 0.205);
+
 }
 
 
@@ -34,13 +36,12 @@ ul {
 .navbar {
     display: flex;
     justify-content: space-between;
-    /* padding: 20px 20px; */
-    /* background-color: #F2F2F2; */
-    /* backdrop-filter: blur(5px); */
     background: none;
     font-size: 16px;
     font-style: bold;
     border-bottom: 1px solid black;
+    padding-top: 0.5rem;
+    
 
 }
 .navbar a{
